--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-phone-number-input": "^3.1.43",
+    "react-phone-number-input": "^3.1.45",
     "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
@@ -39,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.49.0"
   }
 }
