--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-phone-number-input": "^3.1.45",
@@ -41,6 +42,9 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.49.0"
+    "@types/react": "^18.0.14",
+    "firebase": "^9.8.4",
+    "sass": "^1.49.0",
+    "typescript": "^4.7.4"
   }
 }
