--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "prismjs": "^1.28.0",
     "react": "^17.0.2",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.14",
     "firebase": "^9.8.4",
