--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "prismjs": "^1.28.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.1.45",
     "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3",
-    "react-spinners": "^0.11.0",
-    "react-spinners-css": "^2.0.1",
-    "web-vitals": "^1.0.1"
+    "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
