--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.3",
+    "react-toastify": "^9.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -25,10 +26,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": []
   },
   "browserslist": {
     "production": [
@@ -46,6 +44,7 @@
     "@types/axios": "^0.14.0",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.6",
     "firebase": "^9.8.4",
     "sass": "^1.49.0",
     "typescript": "^4.7.4"
