--- a/package.json
+++ b/package.json
@@ -45,8 +45,11 @@
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.7",
     "firebase": "^9.8.4",
-    "sass": "^1.49.0",
+    "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
+    "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
   }
 }
