--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -48,9 +48,12 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.7",
+    "babel-plugin-prismjs": "^2.1.0",
+    "customize-cra": "^1.0.0",
     "firebase": "^9.8.4",
     "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
+    "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
   }
